# ScreenSentinel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/screensentinel/: __init__.py  capture.py  cli.py  db.py  drift.py  notify.py  session.py  types.py  vision.py
tests/: test_cli.py  test_db.py  test_drift.py  test_session.py  test_vision.py
